--- a/Todo-List/style.css
+++ b/Todo-List/style.css
@@ -1,26 +1,22 @@
-
-
-.root {
-    width: 100%;
-    height: 100%;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    background-color:blue;
-    align-content: flex-end;
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 }
 
 .container {
-    width: 500px;
-    height: 500px;
-    display:flex;
-    justify-content: center;
-    background-color: bisque;
-    align-items: center;
-
-    
+    width: 100%;
+    min-height: 100vh;
+    padding-top:10px;
+    background: linear-gradient(135deg, #153677, rgb(118, 24, 147));
 }
 
-
-
+.todo-app {
+    width: 100%;
+    max-width: 540px;
+    background: #fff;
+    margin: 100px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+}
