--- a/Todo-List/style.css
+++ b/Todo-List/style.css
@@ -8,7 +8,7 @@
 .container {
     width: 100%;
     min-height: 100vh;
-    padding-top:10px;
+    padding:10px;
     background: linear-gradient(135deg, #153677, rgb(118, 24, 147));
 }
 
@@ -20,3 +20,48 @@
     padding: 40px 30px 70px;
     border-radius: 10px;
 }
+
+.row {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #edeef0;
+    border-radius: 30px;
+    padding-left:20px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+input {
+    flex: 1;
+    border:none;
+    outline:none;
+    background:transparent;
+    padding: 10px;
+    font-weight: 20px;
+}
+
+button {
+    border: none;
+    outline:none;
+    padding: 16px 50px;
+    background: #ff5945;
+    color:#fff;
+    font-size:16px;
+    cursor:pointer;
+    border-radius: 40px;
+}
+
+.todo-item {
+    list-style:none;
+    padding: 10px 30px;
+
+}
+
+.todo-list li::before {
+    content: '⃝';
+    color: #0d0d0d;
+    font-size: 20px;
+    padding-right: 20px;
+}
+
