--- a/Todo-List/style.css
+++ b/Todo-List/style.css
@@ -13,10 +13,12 @@
 }
 
 .todo-app {
+    display:flex;
+    flex-direction: column;
     width: 100%;
     max-width: 540px;
     background: #fff;
-    margin: 100px auto 20px;
+    margin: 100px auto 20px; /* top right bottom left */
     padding: 40px 30px 70px;
     border-radius: 10px;
 }
@@ -27,9 +29,8 @@
     justify-content: space-between;
     background: #edeef0;
     border-radius: 30px;
-    padding-left:20px;
-    margin-top: 50px;
-    margin-bottom: 30px;
+    margin: 40px 0 30px;
+    padding-left: 5px;
 }
 
 input {
@@ -37,8 +38,9 @@ input {
     border:none;
     outline:none;
     background:transparent;
-    padding: 10px;
+    padding: 15px;
     font-weight: 20px;
+    font-size: 20px;
 }
 
 button {
@@ -55,7 +57,9 @@ button {
 .todo-item {
     list-style:none;
     padding: 10px 30px;
-
+    font-size:20px;
+    user-select:none;
+    cursor: pointer;
 }
 
 .todo-list {
@@ -64,7 +68,20 @@ button {
 }
 
 .todo-list li::before {
-    content: '⃝';
+    content: '⭕️';
+    color: #0d0d0d;
+    font-size: 20px;
+    padding-right: 20px;
+    margin-left:-20px;
+}
+
+ul li.checked {
+    color:#555;
+    text-decoration: line-through;
+}
+
+ul li.checked::before {
+    content: '🟢';
     color: #0d0d0d;
     font-size: 20px;
     padding-right: 20px;
