--- a/Todo-List/style.css
+++ b/Todo-List/style.css
@@ -87,3 +87,20 @@ ul li.checked::before {
     padding-right: 20px;
 }
 
+ul li span {
+    position:absolute;
+    right: 200px;
+    width: 40px;
+    
+    height:40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50px;
+}
+
+ul li span:hover {
+    background: #edeef0;
+}
+
