--- a/Todo-List/style.css
+++ b/Todo-List/style.css
@@ -90,8 +90,7 @@ ul li.checked::before {
 ul li span {
     position:absolute;
     right: 200px;
-    width: 40px;
-    
+    width: 40px;;
     height:40px;
     font-size: 22px;
     color: #555;
